--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Rey's Website</title>
+  <title>Rey's Amusement</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="a.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
@@ -11,25 +11,23 @@
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="#title">
             <i class="fas fa-brain"></i>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#links" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        
+        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="links">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My Pictures</a>
+                    <a class="nav-link" href="https://www.instagram.com/rey.mui/">Instagram</a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="#">My Links</a>
                 </li> -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Favorite Sites
-                    </a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Favorite Sites</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="http://www.scmp.com">SCMP</a>
                       <a class="dropdown-item" href="http://www.straitstimes.com">Straits Times</a>
@@ -72,7 +70,7 @@
 
 <!-- partial:index.partial.html -->
 <div id="title" class="slide header">
-  <h1>Rey's Website</h1>
+  <h1>Rey's Nonsense Site</h1>
 </div>
 
 <!-- <div id="slide1a" class="slide">
@@ -81,24 +79,31 @@
 <div id="slide1" class="slide">
   <div class="title">
     <h1>Because we love parallax.</h1>
-    <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+    <p>I can't believe I spent so much time doing this frontend stuff when I could have been watching Netflix. Just kidding, who doesn't love frontend?</p>
   </div>
 </div>
 
 <div id="slide2" class="slide">
   <div class="title2">
-    <h1>Slide 2</h1>
-    <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+    <h1>Some of my favorite cars</h1>
+    <p>As if I can afford them, LOL! Nice to look at though.<br>
+      <br>
+      From top to bottom: <br>
+      <br>
+      Porsche 911 Turbo S <br>
+      Lexus LFA <br>
+      Lamborghini Huracan Performante <br>
+    </p>
   </div>
-  <img src="Rey1.jpg">
-  <img src="Rey1.jpg">
-  <img src="Rey1.jpg"> 
+  <img src="turboS.jpg">
+  <img src="LexusLFA.JPG">
+  <img src="lamborghini-huracan-performante.jpg"> 
 </div>
 
 <div id="slide3" class="slide">
   <div class="title3">
-    <h1>Slide 3</h1>
-    <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+    <h1>Yay, more placeholder content!</h1>
+    <p>I'm guessing this is the section where I write about some philosophical crap or some pithy observation on the human condition. Or something witty like a joke that I did not come up with. Oh! Maybe some stuff about my past work experience and other cool stuff I did. I haven't done much cool stuff.</p>
   </div>
 </div>
 
